# pc-dbCBS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  stats_
commands/: gen_primitives.sh  opt_and_visualize_mujoco.sh  output.html  visualize_initguess_meshcat.sh  visualize_meshcat.sh  visualize_opt_meshcat.sh
configs/: opt.yaml  opt_training.yaml  pc_dbcbs.yaml  pc_dbcbs_empty.yaml  pc_dbcbs_mujocoquad_forest.yaml  pc_dbcbs_obs.yaml
include/: pc_dbcbs_api.hpp
scripts/: benchmark.py  mesh_visualizer.py  run_pcdbcbs.py  visualize_expands.py  visualize_mujoco.py  visualize_payload.py  visualize_prims.py
src/: init_guess_mujoco.cpp  init_guess_mujoco.hpp  init_guess_payload.cpp  pc_dbcbs.cpp  pc_dbcbs_api.cpp  pc_dbcbs_utils.hpp  py_pcdbcbs.cpp
